--- a/src/posts/2021-02-21-test.md
+++ b/src/posts/2021-02-21-test.md
@@ -13,7 +13,6 @@ date: 2021-02-21
 
 # Hallo
 
-This is some test content from the german unicycling championchip 2019.
-
 {% image "assets/images/posts/2021/IMG_20191112_221844.jpg", "Medaillen der Einrad DM 2019" %}
 
+This is some test content from the german unicycling championship 2019.
