Make title shorter to avoid linebreak issues
Signed-off-by: Raphael Höser <raphael@hoeser.info>

--- a/src/blog/2022-07-08-i18n-urls.md
+++ b/src/blog/2022-07-08-i18n-urls.md
@@ -1,5 +1,5 @@
 ---
-title: Internationalization of URLs
+title: I18n of URLs
 abstract: |
   Zach Leatherman asked what style of internationalization you'd prefer (explicit or implicit) and my response just doesn't fit in 280 characters.
 date: 2022-07-08
