--- a/src/404.md
+++ b/src/404.md
@@ -6,12 +6,12 @@ theme:
   colorB: "#f00"
 ---
 
-<section class="devider">
+<header>
   <div class="content">
     <span class="underline_fancy">Error 404</span>
     <h1>This is not the page you're looking for...</h1>
   </div>
-</section>
+</header>
 <main>
   <div class="content">
     <article>
