--- a/src/404.md
+++ b/src/404.md
@@ -1,6 +1,7 @@
 ---
 layout: layouts/main.njk
 permalink: 404.html
+sitemapIgnore: true
 theme:
   colorA: "#ff0"
   colorB: "#f00"
@@ -23,4 +24,11 @@ Maybe you want to check my [blog](/blog) and it's newest entry titled "[{{ (coll
 
   </article>
   </div>
+  <script type="module">
+    window.addEventListener('online', () => {
+      console.log("Back online, trying reload")
+      location.reload()
+    });
+    if(navigator.online) setTimeout(() => location.reload(), 1000);
+  </script>
 </main>
