add legal disclaimer
Signed-off-by: Raphael Höser <raphael@hoeser.info>

--- a/src/blog/2025-08-08-moving-on.md
+++ b/src/blog/2025-08-08-moving-on.md
@@ -54,3 +54,7 @@ I want to thank everyone I had the pleasure of working with during my time at Ap
 Shoutout to the CI-Joes - I still miss the old times and to the ARB team - you rock and I hope you will continue to expand on the great stuff we achieved together.
 
 To me moving on means so much more than "just another entry to my CV". I'm sad to leave the old behind, but I'm also excited for the new adventures ahead.
+
+:::commentBlock
+For legal reasons: Everything I wrote here is my personal experience. Every detail mentioned about my previous employer is based on publicly available information.
+:::
